ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /
        pathType: Prefix # Specify the pathType
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
